adjustments on html pages

--- a/src/main/resources/accounts-server/templates/index.html
+++ b/src/main/resources/accounts-server/templates/index.html
@@ -11,7 +11,7 @@
 
 	<p>
 		This account should exist: <a href="/accounts/123456789">123456789</a>.
-		Look in <code>data.sql</code> to see the rest
+		Look in <code>dataAccount.sql</code> to see the rest
 	</p>
 
 	<h3>Spring Boot URLs</h3>
