--- a/src/main/resources/web-server/templates/footer.html
+++ b/src/main/resources/web-server/templates/footer.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	  xmlns:th="http://www.thymeleaf.org">
 
 <body>
 
-	<footer th:fragment="copy">Microservices Demo - Web Service</footer>
+<footer th:fragment="copy">Microservices Demo - Web Service</footer>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script th:fragment="copy"
-	        type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	
-	<!--  Bootstrap V4 -->
-	<script th:fragment="copy"
-	        src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-	        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-	        crossorigin="anonymous"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script th:fragment="copy"
+		type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+<!--  Bootstrap V4 -->
+<script th:fragment="copy"
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+		crossorigin="anonymous"></script>
 
 <!-- 
 	<script th:fragment="copy"
@@ -31,4 +31,5 @@
 		crossorigin="anonymous"></script>  -->
 </body>
 
+</html>
 </html>
