--- a/src/main/resources/web-server/templates/index.html
+++ b/src/main/resources/web-server/templates/index.html
@@ -6,16 +6,9 @@
 
 <body>
 
-<h1>Web Server</h1>
-<h3>Overview</h3>
-<ul>
-	<li>Demo defines a simple web-application for accessing accounts
-		data.</li>
-	<li>All the account information is fetched via a RESTful
-		interface to a Accounts microservice.</li>
-</ul>
+<h3>Restaurant</h3>
 
-<h3>The Demo</h3>
+<h3>Go to <a th:href="@{/login}">Login</a> </h3>
 
 <ul class="openlist">
 	<li>Eureka Dashboard: <a
@@ -39,22 +32,6 @@
 	<li>Product <a th:href="@{/products/search}">Search</a></li>
 
 	<li>Order <a th:href="@{/orders/search}">Search</a></li>
-</ul>
-
-<h3>Spring Boot URLs</h3>
-<p>For those interested, Spring Boot provides RESTful URLs for
-	interrogating your application (they return JSON format data):</p>
-
-<ul>
-	<li><a th:href="@{/actuator/beans}">The beans</a></li>
-	<li><a th:href="@{/actuator/env}">The environment</a></li>
-	<li><a th:href="@{/actuator/health}">Application health</a></li>
-	<li><a th:href="@{/actuator/mappings}">URL Mappings</a> - including
-		the /account mappings</li>
-	<li><a th:href="@{/actuator/metrics}">Application metrics</a> - add any
-		metric name to the end of this URL, for example
-		<a th:href="@{/actuator/metrics/http.server.requests}">/actuator/metrics/http.server.requests</a></li>
-	<li><a th:href="@{/actuator}">List of actuator endpoints</a></li>
 </ul>
 
 <div th:replace="footer :: copy"></div>
