changes on index pages

--- a/src/main/resources/web-server/templates/index.html
+++ b/src/main/resources/web-server/templates/index.html
@@ -27,6 +27,10 @@
 
 	<li>Fetch by client name: <a th:href="@{/orders/client/Keri}">/orders/client/Keri</a></li>
 
+	<li>All products <a th:href="@{/products}">/products</a></li>
+
+	<li>All orders <a th:href="@{/orders}">/orders</a></li>
+
 	<li>Account <a th:href="@{/accounts/search}">Search</a></li>
 
 	<li>Product <a th:href="@{/products/search}">Search</a></li>
