--- a/src/main/resources/web-server/templates/account.html
+++ b/src/main/resources/web-server/templates/account.html
@@ -33,7 +33,7 @@
 
 	<div class="row" style="text-align: right">
 	    <span class="col-12">
-		Options: &nbsp; <a th:href="@{/}">Home</a> | <a
+		Options: &nbsp; <a th:href="@{/home}">Home</a> | <a
 			th:href="@{/accounts/search}">Account Search</a></span>
 	</div>
 
