--- a/src/main/resources/web-server/templates/orders.html
+++ b/src/main/resources/web-server/templates/orders.html
@@ -48,7 +48,7 @@
 </div>
 
 <div style="text-align: right">
-    Options: <a th:href="@{/}">Home</a> | <a th:href="@{/orders/search}">Order
+    Options: <a th:href="@{/home}">Home</a> | <a th:href="@{/orders/search}">Order
     Search</a>
 </div>
 
