--- a/src/main/resources/web-server/templates/accounts.html
+++ b/src/main/resources/web-server/templates/accounts.html
@@ -42,7 +42,7 @@
 	</div>
 
 	<div style="text-align: right">
-		Options: <a th:href="@{/}">Home</a> | <a th:href="@{/accounts/search}">Account
+		Options: <a th:href="@{/home}">Home</a> | <a th:href="@{/accounts/search}">Account
 			Search</a>
 	</div>
 
