--- a/src/main/resources/web-server/templates/products.html
+++ b/src/main/resources/web-server/templates/products.html
@@ -48,7 +48,7 @@
 </div>
 
 <div style="text-align: right">
-    Options: <a th:href="@{/}">Home</a> | <a th:href="@{/products/search}">Product
+    Options: <a th:href="@{/home}">Home</a> | <a th:href="@{/products/search}">Product
     Search</a>
 </div>
 
