--- a/src/main/resources/web-server/templates/header.html
+++ b/src/main/resources/web-server/templates/header.html
@@ -40,7 +40,7 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active m-2"><a href="/home" th:href="@{/home}">Home</a></li>
             <li class="nav-item m-2">
-                <a href="https://spring.io/blog/2015/07/14/microservices-with-spring">Menu</a>
+                <a href="/menu" th:href="@{/menu}">Menu</a>
             </li>
             <li class="nav-item m-2">
                 <a href="http://spring.io/blog">My orders</a>
@@ -49,7 +49,7 @@
                 <a href="http://spring.io/blog">Create order</a>
             </li>
             <li class="nav-item m-2">
-                <a href="/" th:href="@{/}">Log out</a>
+                <a href="/logout" th:href="@{/logout}">Log out</a>
             </li>
         </ul>
 
