--- a/src/main/resources/web-server/templates/login.html
+++ b/src/main/resources/web-server/templates/login.html
@@ -10,8 +10,8 @@
 <form method="post" th:action="@{/login}" th:object="${user}" >
     <h1>Authentication</h1>
     <input type="text" onfocus="this.value=''" placeholder="username" th:field="*{username}" /></p>
-    <input type="password" onfocus="this.value=''"  placeholder="password"th:field="*{password}" /></p>
-    <button name="login">Login</button>
+    <input type="password" onfocus="this.value=''"  placeholder="password" th:field="*{password}" /></p>
+    <button type="submit" name="login">Login</button>
 </form>
 
 <div th:replace="footer :: copy"></div>
